[project]
name = "stcodegenerate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "antlr4-python3-runtime>=4.13.2",
    "jinja2>=3.1.6",
    "lark>=1.3.1",
    "openai>=2.21.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
